k8/solicitud-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solicitud-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solicitud-service
  template:
    metadata:
      labels:
        app: solicitud-service
    spec:
      containers:
        - name: solicitud-service
          image: solicitud-service
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: solicitud-service
spec:
  selector:
    app: solicitud-service
  ports:
    - port: 80
      targetPort: 5000
