k8/istio-rules.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: solicitud-service
spec:
  hosts:
    - "*"
  gateways:
    - solicitud-gateway
  http:
    - match:
        - uri:
            prefix: /solicitudes
      retries:
        attempts: 2
        perTryTimeout: 2s
        retryOn: gateway-error,connect-failure,refused-stream,5xx
      route:
        - destination:
            host: solicitud-service
            port:
              number: 80

---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: solicitud-destination
spec:
  host: solicitud-service
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 3 # 3 errores 5xx seguidos
      interval: 60s # evaluados cada 60 segundos
      baseEjectionTime: 30s # tiempo de espera tras "sacarlo"
      maxEjectionPercent: 100
    connectionPool:
      tcp:
        maxConnections: 1
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
